# rules_pycross

.github/workflows/: ci.yaml
e2e/pdm/multi_version_test/: MODULE.bazel  main.py  pyproject.toml
e2e/poetry/multi_version_test/: MODULE.bazel  pyproject.toml
e2e/uv/multi_version_test/: BUILD.bazel  MODULE.bazel  test_foo.py
